--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 
           <div>
-              <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 lg:px-0 px-6">
+              <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 lg:px-0 px-6 mt-7">
 
                 <!-- progress card 1 -->
 
@@ -176,7 +176,66 @@
     </section>
 
 
+    <!-- Program Sections Style Here -->
 
+
+    <section class="container mx-auto">
+        <div>
+
+          <div class="border-t border-b border-dashed border-[#D0D0D1] text-center py-8 space-y-6 mb-12">
+            <h1 class="text-4xl font-extrabold manrope text-[#131318]">Program Sections</h1>
+            <p class="text-base font-medium text-[#717174] lg:w-[600px] mx-auto">Hockey is a national game of India in spite of ever-growing popularity of other games and sports in India like cricket, badminton</p>
+          </div>
+
+
+          <div>
+            <div class="grid grid-cols-1 lg:grid-cols-6 gap-5">
+
+              <!-- program image 1 -->
+  
+                  <div class="col-span-1 lg:col-span-3 bg-cover bg-center h-96 border rounded-lg" style="background-image:linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url('images/2.png');">
+
+                    <div class="p-10 lg:translate-y-20 translate-y-14">
+                      <h1 class="text-3xl font-extrabold text-white">Junior Program</h1>
+                      <p class="text-base font-medium text-white lg:w-[495px] my-5">Now this game has also been popular in other countries such as Holland, Germany, Pakistan, Australia, England, etc. It is a fast game, in which players have to run all time whenever game takes its speed  Ajit Pal Singh</p>
+                      <button class="text-xl font-bold text-white px-6 py-3 bg-[#FF4240] rounded-lg">Register Now!</button>
+                  </div>
+
+
+                  </div>
+  
+                  <!-- program image 2 -->
+  
+                
+                  <div class="col-span-1 lg:col-span-3 bg-cover bg-center h-96 border rounded-lg" style="background-image:linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url('images/3.png');">
+
+                    <div class="p-10 lg:translate-y-20 translate-y-14">
+                      <h1 class="text-3xl font-extrabold text-white">Teenager Program</h1>
+                      <p class="text-base font-medium text-white lg:w-[495px] my-5">Now this game has also been popular in other countries such as Holland, Germany, Pakistan, Australia, England, etc. It is a fast game, in which players have to run all time whenever game takes its speed  Ajit Pal Singh</p>
+                      <button class="text-xl font-bold text-white px-6 py-3 bg-[#FF4240] rounded-lg">Register Now!</button>
+                  </div>
+
+                  </div>
+  
+                
+  
+                    <!-- program image 3 -->
+  
+  
+                  <div class="bg-cover bg-center h-[450px] border rounded-lg col-span-1 lg:col-span-6" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url('images/4.png');">
+  
+                    <div class="p-10 lg:translate-y-36 translate-y-28">
+                    <h1 class="text-3xl font-extrabold text-white">Professional Program</h1>
+                    <p class="text-base font-medium text-white lg:w-[495px] my-5">Now this game has also been popular in other countries such as Holland, Germany, Pakistan, Australia, England, etc. It is a fast game, in which players have to run all time whenever game takes its speed  Ajit Pal Singh</p>
+                    <button class="text-xl font-bold text-white px-6 py-3 bg-[#FF4240] rounded-lg">Register Now!</button>
+                </div>
+  
+                  </div>
+            </div>
+          </div>
+
+        </div>
+    </section>
 
 
 </body>
