our product style finish

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           </div>
 
 
-          <div>
+          <div class="lg:px-0 px-6">
             <div class="grid grid-cols-1 lg:grid-cols-6 gap-5">
 
               <!-- program image 1 -->
@@ -224,7 +224,7 @@
   
                   <div class="bg-cover bg-center h-[450px] border rounded-lg col-span-1 lg:col-span-6" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url('images/4.png');">
   
-                    <div class="p-10 lg:translate-y-36 translate-y-28">
+                    <div class="p-10 lg:translate-y-36 translate-y-24">
                     <h1 class="text-3xl font-extrabold text-white">Professional Program</h1>
                     <p class="text-base font-medium text-white lg:w-[495px] my-5">Now this game has also been popular in other countries such as Holland, Germany, Pakistan, Australia, England, etc. It is a fast game, in which players have to run all time whenever game takes its speed  Ajit Pal Singh</p>
                     <button class="text-xl font-bold text-white px-6 py-3 bg-[#FF4240] rounded-lg">Register Now!</button>
@@ -236,6 +236,198 @@
 
         </div>
     </section>
+
+
+
+    <!-- Our New Products Style Here -->
+
+
+
+    <section class="container mx-auto">
+        <div class="lg:mt-20 mt-16">
+            <div class="border-t border-b border-dashed border-[#D0D0D1] text-center py-8 space-y-6">
+            <h1 class="text-4xl font-extrabold manrope text-[#131318]">Our New Products</h1>
+            <p class="text-base font-medium text-[#717174] lg:w-[600px] mx-auto">Hockey is a nice game and mostly liked by the students. In order to bring another golden period for the hockey</p>
+          </div>
+
+
+          <div>
+              <div class="my-14 px-6 lg:px-0">
+
+                  <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+                    <!-- product card 1 here -->
+
+                    <div class="flex flex-col lg:flex-row items-center gap-5 border-2 rounded-2xl p-6">
+                      <div>
+                          <img class="" src="images/5.png" alt="">
+                      </div>
+                      <div class="space-y-5">
+                          <div class="flex items-center gap-4">
+                              <img class="h-5" src="images/star.png" alt=""><p class="text-base font-medium text-[#717174]">5.0</p>
+                              <img class="h-5"src="images/view.png" alt=""> <p class="text-base font-medium text-[#717174]">20</p>
+                              <img class="h-5"src="images/heart.png" alt=""><p class="text-base font-medium text-[#717174]">200</p>
+                          </div>
+                          <h2 class="text-xl font-extrabold text-[#131318]">World Cup Flags Football</h2>
+                          <p class="text-base font-medium text-[#717174]">Some of the Indian heroes of golden era hockey were Dhyan Chand</p>
+                          <div class="flex flex-col md:flex-row gap-4 lg:items-center">
+                              <div>
+                                <h4 class="text-lg font-extrabold text-[#FF4240]">Price - $22.00</h4>
+                              </div>
+                              <div class="flex gap-4">
+                                <img class="h-5" src="images/shopping-cart.png" alt="">
+                              <p class="text-base font-medium text-[#717174]">Delivery Fee : Free</p>
+                              </div>
+                         </div>
+                      </div>
+                  </div>
+
+                  <!-- product card 2 here -->
+
+                  <div class="flex flex-col lg:flex-row items-center gap-5 border-2 rounded-2xl p-6">
+                    <div>
+                        <img src="images/6.png" alt="">
+                    </div>
+                    <div class="space-y-5">
+                        <div class="flex items-center gap-4">
+                            <img class="h-5" src="images/star.png" alt=""><p class="text-base font-medium text-[#717174]">5.0</p>
+                            <img class="h-5"src="images/view.png" alt=""> <p class="text-base font-medium text-[#717174]">20</p>
+                            <img class="h-5"src="images/heart.png" alt=""><p class="text-base font-medium text-[#717174]">200</p>
+                        </div>
+                        <h2 class="text-xl font-extrabold text-[#131318]">Minor Hockey's Lucky Puck</h2>
+                        <p class="text-base font-medium text-[#717174]">Some of the Indian heroes of golden era hockey were Dhyan Chand</p>
+                        <div class="flex flex-col md:flex-row gap-4 lg:items-center">
+                          <div>
+                            <h4 class="text-lg font-extrabold text-[#FF4240]">Price - $22.00</h4>
+                          </div>
+                          <div class="flex gap-4">
+                            <img class="h-5" src="images/shopping-cart.png" alt="">
+                          <p class="text-base font-medium text-[#717174]">Delivery Fee : Free</p>
+                          </div>
+                     </div>
+                    </div>
+                </div>
+
+                  <!-- product card 3 here -->
+
+                  <div class="flex flex-col lg:flex-row items-center gap-5 border-2 rounded-2xl p-6">
+                    <div>
+                        <img src="images/7.png" alt="">
+                    </div>
+                    <div class="space-y-5">
+                        <div class="flex items-center gap-4">
+                            <img class="h-5" src="images/star.png" alt=""><p class="text-base font-medium text-[#717174]">5.0</p>
+                            <img class="h-5"src="images/view.png" alt=""> <p class="text-base font-medium text-[#717174]">20</p>
+                            <img class="h-5"src="images/heart.png" alt=""><p class="text-base font-medium text-[#717174]">200</p>
+                        </div>
+                        <h2 class="text-xl font-extrabold text-[#131318]">Cap For Hockeys</h2>
+                        <p class="text-base font-medium text-[#717174]">Some of the Indian heroes of golden era hockey were Dhyan Chand</p>
+                        <div class="flex flex-col md:flex-row gap-4 lg:items-center">
+                          <div>
+                            <h4 class="text-lg font-extrabold text-[#FF4240]">Price - $22.00</h4>
+                          </div>
+                          <div class="flex gap-4">
+                            <img class="h-5" src="images/shopping-cart.png" alt="">
+                          <p class="text-base font-medium text-[#717174]">Delivery Fee : Free</p>
+                          </div>
+                     </div>
+                    </div>
+                </div>
+
+                  <!-- product card 4 here -->
+
+                  <div class="flex flex-col lg:flex-row items-center gap-5 border-2 rounded-2xl p-6">
+                    <div>
+                        <img src="images/8.png" alt="">
+                    </div>
+                    <div class="space-y-5">
+                        <div class="flex items-center gap-4">
+                            <img class="h-5" src="images/star.png" alt=""><p class="text-base font-medium text-[#717174]">5.0</p>
+                            <img class="h-5"src="images/view.png" alt=""> <p class="text-base font-medium text-[#717174]">20</p>
+                            <img class="h-5"src="images/heart.png" alt=""><p class="text-base font-medium text-[#717174]">200</p>
+                        </div>
+                        <h2 class="text-xl font-extrabold text-[#131318]"> Sic and Twisted Biscuit </h2>
+                        <p class="text-base font-medium text-[#717174]">Some of the Indian heroes of golden era hockey were Dhyan Chand</p>
+                        <div class="flex flex-col md:flex-row gap-4 lg:items-center">
+                          <div>
+                            <h4 class="text-lg font-extrabold text-[#FF4240]">Price - $22.00</h4>
+                          </div>
+                          <div class="flex gap-4">
+                            <img class="h-5" src="images/shopping-cart.png" alt="">
+                          <p class="text-base font-medium text-[#717174]">Delivery Fee : Free</p>
+                          </div>
+                     </div>
+                    </div>
+                </div>
+
+                  <!-- product card 5 here -->
+
+                  <div class="flex flex-col lg:flex-row items-center gap-5 border-2 rounded-2xl p-6">
+                    <div>
+                        <img src="images/9.png" alt="">
+                    </div>
+                    <div class="space-y-5">
+                        <div class="flex items-center gap-4">
+                            <img class="h-5" src="images/star.png" alt=""><p class="text-base font-medium text-[#717174]">5.0</p>
+                            <img class="h-5"src="images/view.png" alt=""> <p class="text-base font-medium text-[#717174]">20</p>
+                            <img class="h-5"src="images/heart.png" alt=""><p class="text-base font-medium text-[#717174]">200</p>
+                        </div>
+                        <h2 class="text-xl font-extrabold text-[#131318]">Battle of the Ice Warriors</h2>
+                        <p class="text-base font-medium text-[#717174]">Some of the Indian heroes of golden era hockey were Dhyan Chand</p>
+                        <div class="flex flex-col md:flex-row gap-4 lg:items-center">
+                          <div>
+                            <h4 class="text-lg font-extrabold text-[#FF4240]">Price - $22.00</h4>
+                          </div>
+                          <div class="flex gap-4">
+                            <img class="h-5" src="images/shopping-cart.png" alt="">
+                          <p class="text-base font-medium text-[#717174]">Delivery Fee : Free</p>
+                          </div>
+                     </div>
+                    </div>
+                </div>
+
+                  <!-- product card 6 here -->
+
+
+                  <div class="flex flex-col lg:flex-row items-center gap-5 border-2 rounded-2xl p-6">
+                    <div>
+                        <img src="images/10.png" alt="">
+                    </div>
+                    <div class="space-y-5">
+                        <div class="flex items-center gap-4">
+                            <img class="h-5" src="images/star.png" alt=""><p class="text-base font-medium text-[#717174]">5.0</p>
+                            <img class="h-5"src="images/view.png" alt=""> <p class="text-base font-medium text-[#717174]">20</p>
+                            <img class="h-5"src="images/heart.png" alt=""><p class="text-base font-medium text-[#717174]">200</p>
+                        </div>
+                        <h2 class="text-xl font-extrabold text-[#131318]">The Winter Classic Reboot</h2>
+                        <p class="text-base font-medium text-[#717174]">Some of the Indian heroes of golden era hockey were Dhyan Chand</p>
+                        <div class="flex flex-col md:flex-row gap-4 lg:items-center">
+                          <div>
+                            <h4 class="text-lg font-extrabold text-[#FF4240]">Price - $22.00</h4>
+                          </div>
+                          <div class="flex gap-4">
+                            <img class="h-5" src="images/shopping-cart.png" alt="">
+                          <p class="text-base font-medium text-[#717174]">Delivery Fee : Free</p>
+                          </div>
+                     </div>
+                    </div>
+                </div>
+
+
+                  </div>  
+              </div>
+          </div>
+        </div>
+    </section>
+
+
+
+
+
+    <!-- Clients Question Style Here -->
+
+
+    
+
 
 
 </body>
