client question style finish

--- a/index.html
+++ b/index.html
@@ -245,9 +245,9 @@
 
     <section class="container mx-auto">
         <div class="lg:mt-20 mt-16">
-            <div class="border-t border-b border-dashed border-[#D0D0D1] text-center py-8 space-y-6">
-            <h1 class="text-4xl font-extrabold manrope text-[#131318]">Our New Products</h1>
-            <p class="text-base font-medium text-[#717174] lg:w-[600px] mx-auto">Hockey is a nice game and mostly liked by the students. In order to bring another golden period for the hockey</p>
+           <div class="border-t border-b border-dashed border-[#D0D0D1] text-center py-8 space-y-6">
+              <h1 class="text-4xl font-extrabold manrope text-[#131318]">Our New Products</h1>
+              <p class="text-base font-medium text-[#717174] lg:w-[600px] mx-auto">Hockey is a nice game and mostly liked by the students. In order to bring another golden period for the hockey</p>
           </div>
 
 
@@ -426,8 +426,95 @@
     <!-- Clients Question Style Here -->
 
 
-    
 
+    <section class="container mx-auto">
+        <div class="my-24">
+          <div class="border-t border-b border-dashed border-[#D0D0D1] text-center py-8 space-y-6">
+            <h1 class="text-4xl font-extrabold manrope text-[#131318]">Clients Question</h1>
+            <p class="text-base font-medium text-[#717174] lg:w-[600px] mx-auto">Hockey is a nice game and mostly liked by the students. In order to bring another golden period for the hockey</p>
+        </div>
+
+
+        <div class="px-6 lg:px-0">
+            <div class="grid grid-cols-1 lg:grid-cols-6 gap-6 border-2 mt-12 p-8 rounded-2xl">
+              <div class="col-span-2">
+                  <img class="w-full h-full" src="images/11.png" alt="">
+              </div>
+              <div class="col-span-4">
+                <div class="collapse collapse-plus border-b">
+                  <input type="radio" name="my-accordion-3" checked="checked" /> 
+                  <div class="collapse-title text-xl font-bold text-[#131318]">
+                    Our Equipment
+                  </div>
+                  <div class="collapse-content"> 
+                    <p class="text-[#717174]">Hockey is an outdoor game played by two teams having eleven players in each. It has been chosen as the national game of India because India has been a world champion in hockey for many years</p>
+                  </div>
+                </div>
+                <div class="collapse collapse-plus border-b rounded-none">
+                  <input type="radio" name="my-accordion-3" /> 
+                  <div class="collapse-title text-xl font-bold text-[#131318]">
+                    Hockey Training
+                  </div>
+                  <div class="collapse-content"> 
+                    <p class="text-[#717174]">Hockey is an outdoor game played by two teams having eleven players in each. It has been chosen as the national game of India because India has been a world champion in hockey for many years</p>
+                  </div>
+                </div>
+                <div class="collapse collapse-plus border-b ">
+                  <input type="radio" name="my-accordion-3" /> 
+                  <div class="collapse-title text-xl font-bold text-[#131318]">
+                    Private Lessons
+                  </div>
+                  <div class="collapse-content"> 
+                    <p class="text-[#717174]">Hockey is an outdoor game played by two teams having eleven players in each. It has been chosen as the national game of India because India has been a world champion in hockey for many years</p>
+                  </div>
+                </div>
+                <div class="collapse collapse-plus border-b rounded-none">
+                  <input type="radio" name="my-accordion-3" /> 
+                  <div class="collapse-title text-xl font-bold text-[#131318]">
+                    Ski Touring
+                  </div>
+                  <div class="collapse-content"> 
+                    <p class="text-[#717174]">Hockey is an outdoor game played by two teams having eleven players in each. It has been chosen as the national game of India because India has been a world champion in hockey for many years</p>
+                  </div>
+                </div>
+                <div class="collapse collapse-plus border-b rounded-none">
+                  <input type="radio" name="my-accordion-3" /> 
+                  <div class="collapse-title text-xl font-bold text-[#131318]">
+                    Booking
+                  </div>
+                  <div class="collapse-content"> 
+                    <p class="text-[#717174]">Hockey is an outdoor game played by two teams having eleven players in each. It has been chosen as the national game of India because India has been a world champion in hockey for many years</p>
+                  </div>
+                </div>
+
+                <div class="collapse collapse-plus border-b rounded-none">
+                  <input type="radio" name="my-accordion-3" /> 
+                  <div class="collapse-title text-xl font-bold text-[#131318]">
+                    Contact 
+                  </div>
+                  <div class="collapse-content"> 
+                    <p class="text-[#717174]">Hockey is an outdoor game played by two teams having eleven players in each. It has been chosen as the national game of India because India has been a world champion in hockey for many years</p>
+                  </div>
+                </div>
+
+                
+
+                <div class="collapse collapse-plus rounded-none">
+                  <input type="radio" name="my-accordion-3" /> 
+                  <div class="collapse-title text-xl font-bold text-[#131318]">
+                    Pricings
+                  </div>
+                  <div class="collapse-content"> 
+                    <p class="text-[#717174]">Hockey is an outdoor game played by two teams having eleven players in each. It has been chosen as the national game of India because India has been a world champion in hockey for many years</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+
+
+        </div>
+    </section>
 
 
 </body>
