--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 
 
         <div class="px-6 lg:px-0">
-            <div class="grid grid-cols-1 lg:grid-cols-6 gap-6 border-2 mt-12 p-8 rounded-2xl">
+            <div class="grid grid-cols-1 lg:grid-cols-6 lg:gap-6 border-2 mt-12 p-8 rounded-2xl">
               <div class="col-span-2">
                   <img class="w-full h-full" src="images/11.png" alt="">
               </div>
@@ -515,6 +515,100 @@
 
         </div>
     </section>
+
+
+    <!-- Get in touch section style here -->
+
+    <section class="container mx-auto">
+        <div class="lg:px-0 px-6">
+            <div class="border-t border-b border-dashed border-[#D0D0D1] text-center py-8 space-y-6">
+              <h1 class="text-4xl font-extrabold manrope text-[#131318]">Get In Touch</h1>
+              <p class="text-base font-medium text-[#717174] lg:w-[600px] mx-auto">Playing hockey game in safe manner requires some important equipment which are named as helmet, neck guard, shoulder pads, elbow pads</p>
+            </div>
+
+            <div class="my-12">
+                <div class="grid grid-cols-1 lg:grid-cols-6 lg:gap-6">
+                    <div class="col-span-2"> 
+                      <div class="space-y-6 border-2 rounded-2xl p-12">
+
+                        <!-- contact card 1 -->
+                            <div class="card bg-[#f8fdf0] rounded-2xl">
+                              <div class="card-body">
+                                <img class="w-16" src="images/call.png" alt="">
+                                <h2 class="card-title mt-6 text-base text-[#a7aba5]">Phone Number</h2>
+                                <p class="text-lg font-extrabold">(+62) 123-321-543</p>
+                              </div>
+                            </div>
+
+                            <!-- contact card 2 -->
+
+                            <div class="card bg-[#fffcef] rounded-2xl">
+                              <div class="card-body">
+                                <img class="w-16" src="images/massage.png" alt="">
+                                <h2 class="card-title mt-6 text-base text-[#a7aba5]">Phone Number</h2>
+                                <p class="text-lg font-extrabold">(+62) 123-321-543</p>
+                              </div>
+                            </div>
+
+                            <!-- contact card 3 -->
+                            <div class="card bg-[#eff5fe] rounded-2xl">
+                              <div class="card-body">
+                                <img class="w-16" src="images/map.png" alt="">
+                                <h2 class="card-title mt-6 text-base text-[#a7aba5]">Phone Number</h2>
+                                <p class="text-lg font-extrabold">(+62) 123-321-543</p>
+                              </div>
+                            </div>
+                            
+                      </div>
+                    </div>
+                    <div class="col-span-4">
+                        <div class="grid grid-cols-2 gap-4">
+                            <div class="col-span-2 lg:col-span-1">
+                              <h2 class="text-xl font-bold text-[#131318]">Your Name</h2>
+                              <input type="text" placeholder="Enter your full name" class="input rounded-xl input-bordered bg-[#f8f8f8] text-base mt-4 text-[#b3b3b5] w-full h-[60px] " />
+                            </div>
+                            <div class="col-span-2 lg:col-span-1">
+                              <h2 class="text-xl font-bold text-[#131318]">Your Email</h2>
+                              <input type="text" placeholder="Enter your email" class="input input-bordered rounded-xl text-base mt-4 bg-[#f8f8f8] text-[#b3b3b5] w-full h-[60px] " />
+                            </div>
+                            <div class="col-span-2 lg:col-span-1">
+                              <h2 class="text-xl font-bold text-[#131318]">Subject</h2>
+                              <input type="text" placeholder="Enter your email" class="input input-bordered rounded-xl text-base mt-4 bg-[#f8f8f8] text-[#b3b3b5] w-full h-[60px] " />
+                            </div>
+                            <div class="col-span-2 lg:col-span-1">
+                              <h2 class="text-xl font-bold text-[#131318]">Phone Number</h2>
+                              <input type="text" placeholder="Enter your email" class="input input-bordered rounded-xl  text-base mt-4 bg-[#f8f8f8] text-[#b3b3b5] w-full h-[60px] " />
+                            </div>
+
+                            <div class="col-span-2">
+                              <h2 class="text-xl font-bold text-[#131318]">Message</h2>
+                              <textarea class="textarea textarea-bordered mt-4 p-6 w-full text-base text-[#b3b3b5] rounded-xl bg-[#f8f8f8]" rows="16" placeholder="Write your message"></textarea>
+                            </div>
+
+                            <div class="col-span-2">
+                              <button class="w-full bg-[#FF4240] text-xl font-bold text-white py-4 rounded-xl">Send Message</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+        </div>
+    </section>
+
+
+
+    <!-- Social Media section style here -->
+
+
+    <section class="">
+
+    </section>
+
+
 
 
 </body>
