--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
                 </div>
                 <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 rounded-box w-52 ">
-                  <li class="text-base font-bold manrope text-[#424247]"><a>Home</a></li>
+                  <li class="text-base font-bold manrope text-[#FF4240]"><a>Home</a></li>
                   <li class="text-base font-bold manrope text-[#424247]"><a>About</a></li>
                   <li class="text-base font-bold manrope text-[#424247]"><a>Pages</a></li>
                   <li class="text-base font-bold manrope text-[#424247]"><a>Blogs</a></li>
@@ -549,7 +549,7 @@
                             <div class="card bg-[#fffcef] rounded-2xl">
                               <div class="card-body">
                                 <img class="w-10 lg:w-16" src="images/massage.png" alt="">
-                                <h2 class="card-title mt-6 text-sm lg:text-base text-[#a7aba5]">Phone Number</h2>
+                                <h2 class="card-title mt-6 text-sm lg:text-base text-[#a7aba5]">Email</h2>
                                 <p class="text-base lg:text-lg font-extrabold">(+62) 123-321-543</p>
                               </div>
                             </div>
@@ -558,7 +558,7 @@
                             <div class="card bg-[#eff5fe] rounded-2xl">
                               <div class="card-body">
                                 <img class="w-10 lg:w-16" src="images/map.png" alt="">
-                                <h2 class="card-title mt-6 text-sm lg:text-base text-[#a7aba5]">Phone Number</h2>
+                                <h2 class="card-title mt-6 text-sm lg:text-base text-[#a7aba5]">Location</h2>
                                 <p class="text-base lg:text-lg font-extrabold">(+62) 123-321-543</p>
                               </div>
                             </div>
@@ -566,7 +566,7 @@
                       </div>
                     </div>
                     <div class="col-span-4">
-                        <div class="grid grid-cols-2 gap-4">
+                        <div class="grid grid-cols-2 gap-4 lg:mt-0 mt-6">
                             <div class="col-span-2 lg:col-span-1">
                               <h2 class="text-lg lg:text-xl font-bold text-[#131318]">Your Name</h2>
                               <input type="text" placeholder="Enter your full name" class="input rounded-xl input-bordered bg-[#f8f8f8] text-base mt-4 text-[#b3b3b5] w-full h-[60px] " />
@@ -627,7 +627,7 @@
 
   <section class="bg-[#131318] mt-24">
       
-    <footer class="container mx-auto">
+    <footer class="container mx-auto px-4 lg:px-0">
       <div>
         <div class="grid grid-cols-1 lg:grid-cols-4 space-x-0 lg:space-x-60 py-24">
 
@@ -635,13 +635,13 @@
 
           <div class="lg:col-span-1 col-span-4 lg:text-left text-center space-y-4">
               <h1 class="text-xl lg:text-3xl font-extrabold text-white">Get In Touch</h1>
-              <p class="text-xs lg:text-base font-medium text-[#afafaf]">Dit amet consectetur. Condimentum  adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+              <p class="text-xs lg:text-base font-medium text-[#afafaf]">Playing hockey game in safe manner requires some important equipment which are named as helmet, neck guard, shoulder pads, elbow pads</p>
               <div class="flex items-center gap-4">
-                <i class="fa-regular lg:ml-0 ml-16 fa-envelope text-xl lg:text-2xl text-red-500"></i>
+                <i class="fa-regular lg:ml-0 ml-20 fa-envelope text-xl lg:text-2xl text-red-500"></i>
                 <h2 class="text-sm lg:text-base font-medium text-[#afafaf]">hockeys@support.com</h2>
               </div>
               <div class="flex items-center gap-4">
-                <i class="fa-solid lg:ml-0 ml-20 fa-phone text-xl lg:text-2xl text-red-500"></i>
+                <i class="fa-solid lg:ml-0 ml-24 fa-phone text-xl lg:text-2xl text-red-500"></i>
                 <h2 class="text-sm lg:text-base font-medium text-[#afafaf]">(+62) 123-321-543</h2>
               </div>
           </div>
@@ -653,7 +653,7 @@
               <p class="text-sm lg:text-base font-medium text-[#afafaf]">News & Article</p>
               <p class="text-sm lg:text-base font-medium text-[#afafaf]">Legal Notice</p>
           </div>
-          <div class="lg:col-span-1 col-span-2 lg:text-left text-left lg:mt-0 mt-10 space-y-4">
+          <div class="lg:col-span-1 col-span-2 lg:text-left text-left lg:mt-0 mt-10 pr-10 space-y-4">
             <h1 class="text-base lg:text-lg font-bold text-white">Support</h1>
               <p class="text-sm lg:text-base font-medium text-[#afafaf]">About us</p>
               <p class="text-sm lg:text-base font-medium text-[#afafaf]">Leadership</p>
