--- a/index.html
+++ b/index.html
@@ -636,12 +636,12 @@
           <div class="lg:col-span-1 col-span-4 lg:text-left text-center space-y-4">
               <h1 class="text-xl lg:text-3xl font-extrabold text-white">Get In Touch</h1>
               <p class="text-xs lg:text-base font-medium text-[#afafaf]">Playing hockey game in safe manner requires some important equipment which are named as helmet, neck guard, shoulder pads, elbow pads</p>
-              <div class="flex items-center gap-4">
-                <i class="fa-regular lg:ml-0 ml-20 fa-envelope text-xl lg:text-2xl text-red-500"></i>
+              <div class="flex items-center gap-4 lg:ml-0 ml-14">
+                <i class="fa-regular fa-envelope text-xl lg:text-2xl text-red-500"></i>
                 <h2 class="text-sm lg:text-base font-medium text-[#afafaf]">hockeys@support.com</h2>
               </div>
-              <div class="flex items-center gap-4">
-                <i class="fa-solid lg:ml-0 ml-24 fa-phone text-xl lg:text-2xl text-red-500"></i>
+              <div class="flex items-center gap-4 lg:ml-0 ml-14">
+                <i class="fa-solid fa-phone text-xl lg:text-2xl text-red-500"></i>
                 <h2 class="text-sm lg:text-base font-medium text-[#afafaf]">(+62) 123-321-543</h2>
               </div>
           </div>
